Fix mobile image stretch

--- a/assets/scss/pages/_brand.scss
+++ b/assets/scss/pages/_brand.scss
@@ -1,10 +1,10 @@
 .brand.colors {
-  div 
-  div {
+  div div {
     width: 100%;
     height: 8rem;
     color: #fff;
     text-align: center;
+    margin-bottom: 1rem;
 
     &::selection {
       background-color: #fff;
@@ -22,4 +22,8 @@
       background-color: $dark;
     }
   }
+}
+
+.brand.typography {
+  flex-direction: column;
 }
